Adjust PSM input padding and remove rounded corners from PSM select elements

--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -684,7 +684,7 @@ body.zen {
         .post-settings-menu {
             padding-bottom: 0;
 
-            .post-setting:nth-child(3) td {
+            .post-setting:last-of-type td {
                 border-bottom: none;
             }
 
