--- a/sass/layouts/post-settings-menu.scss
+++ b/sass/layouts/post-settings-menu.scss
@@ -63,7 +63,7 @@
 
         &[type="text"] {
             border: none;
-            padding: 8px 0 8px 10px;
+            padding: 8px 0 9px 10px;
             color: $lightgrey;
             border-radius: 0;
             background: transparent;
@@ -84,6 +84,7 @@
 
     .gh-select {
         height: 36px;
+        border-radius: 0;
         &:after {
             color: $lightgrey;
             margin-top: -(0.85em / 2);
