--- a/sass/modules/objectlist.scss
+++ b/sass/modules/objectlist.scss
@@ -79,6 +79,9 @@ a.object-list-item {
     border-radius: 100%;
     display: block;
     border: 1px solid #979797;
+    height: 35px;
+    background-size: cover;
+    background-position: center center;
 } // .object-list-item-figure
 
 .object-list-item-icon,
