--- a/sass/modules/uploader.scss
+++ b/sass/modules/uploader.scss
@@ -103,9 +103,9 @@
 
         &.url{
             font: -webkit-small-control;
-            box-sizing: border-box;
             width: 276px;
             vertical-align: middle;
+            display: inline-block;
             padding: 9px 7px;
             margin: 10px 0;
             outline: 0;
