--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -399,6 +399,17 @@
 
 }
 
+.js-embed-placeholder,
+.iframe-embed-placeholder {
+    background: #f9f9f9;
+    border: none;
+    padding: 100px 20px;
+    font-family: $font-family;
+    font-weight: bold;
+    font-size: 1.6rem;
+    text-align: center;
+}
+
 
 /* =============================================================================
    Full Screen Mode
