Vertically center floating header text
Closes #85

--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -117,6 +117,8 @@
 
             .entry-word-count {
                 float: right;
+                position: relative;
+                top: 2px;
             }
 
         }
