--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -45,9 +45,9 @@
 
 .editor {
 
-    .notifications {
+    .notifications.bottom {
         @media (min-width: 401px) {
-            bottom: 40px;
+            margin-bottom: 40px;
         }
     }
 
