Fix hidden settings back & save buttons
Refs https://github.com/TryGhost/Ghost/issues/3626

--- a/sass/layouts/settings.scss
+++ b/sass/layouts/settings.scss
@@ -267,6 +267,7 @@
         }
         @media (max-width: 650px) {
             padding-left: 15px;
+            margin-top: -10px;
 
             .button-back {
                 position: fixed;
@@ -368,6 +369,9 @@
             height: 77px;
             @media (max-width: 550px) {
                 height: 87px;
+            }
+            @media (max-width: 550px) and (max-height: 600px) {
+                height: 20px;
             }
         }
 
