--- a/sass/layouts/content.scss
+++ b/sass/layouts/content.scss
@@ -73,6 +73,7 @@
             bottom: 0;
             left: 0;
             overflow: auto;
+            -webkit-overflow-scrolling: touch;
             padding-top: 40px;
         } // .content-list-content
 
@@ -233,11 +234,12 @@
 
         .content-preview-content {
             position: absolute;
-            top:0;
-            right:0;
-            bottom:0;
-            left:0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
             overflow: auto;
+            -webkit-overflow-scrolling: touch;
             padding: 80px 40px;
             word-break: break-word;
             hyphens: auto;
@@ -246,10 +248,15 @@
                 max-width: 700px;
                 margin:0 auto;
             }
+
+            @media (max-width: 400px) {
+                padding: 60px 15px;
+            }
+
         } // .content-preview-content
 
         .post-controls {
-            float:right;
+            float: right;
             position: relative;
             top: 3px;
         }
@@ -267,8 +274,8 @@
         }
 
         img {
-            width:100%;
-            height:auto;
+            width: 100%;
+            height :auto;
         }
 
     } // .preview-post
