Shorter default fade-in/out durations
Closes #89

Also added a 1s duration to the auth screens, as this was the intent with making the fade-in animation longer in the first place.

--- a/sass/layouts/auth.scss
+++ b/sass/layouts/auth.scss
@@ -57,6 +57,10 @@
     padding: 0;
     display: table;
 
+    &.fade-in {
+        @include animation-duration(1s);
+    }
+
     @media (max-width: 630px) {
         max-width: 264px;
         text-align: center;
