--- a/sass/modules/animations.scss
+++ b/sass/modules/animations.scss
@@ -37,10 +37,7 @@
     }
 }
 .fade-in {
-    -o-animation: fade-in 1s;
-    -moz-animation: fade-in 1s;
-    -webkit-animation: fade-in 1s;
-    animation: fade-in 1s;
+    @include animation(fade-in 0.2s);
 }
 
 @include keyframes(fade-in-snap) {
@@ -63,8 +60,5 @@
     }
 }
 .fade-out {
-    -o-animation: fade-out 0.5s;
-    -moz-animation: fade-out 0.5s;
-    -webkit-animation: fade-out 0.5s;
-    animation: fade-out 0.5s;
+    @include animation(fade-out 0.35s);
 }
