Rename .active to .open for popover buttons
Closes #90

Also references (and requires) https://github.com/TryGhost/Ghost/pull/3628

--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -468,7 +468,7 @@ body.zen {
 
     .post-settings {
         &:hover,
-        &.active {
+        &.open {
             color: $lightgrey;
         }
     }
