Rename all things icon font
References https://github.com/TryGhost/Ghost/issues/3515

- New unicode names for icons (\e to \f, like FontAwesome)
- Added cache busting (?) URL var to font-face files (inherited from icomoons generated CSS)

--- a/sass/modules/icons.scss
+++ b/sass/modules/icons.scss
@@ -20,11 +20,11 @@
 
 @font-face {
     font-family: 'GhostIcons';
-    src:url('../fonts/icons.eot');
-    src:url('../fonts/icons.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/icons.woff') format('woff'),
-        url('../fonts/icons.ttf') format('truetype'),
-        url('../fonts/icons.svg#icons') format('svg');
+    src:url('../fonts/icons.eot?-9xvo92');
+    src:url('../fonts/icons.eot?#iefix-9xvo92') format('embedded-opentype'),
+        url('../fonts/icons.woff?-9xvo92') format('woff'),
+        url('../fonts/icons.ttf?-9xvo92') format('truetype'),
+        url('../fonts/icons.svg?-9xvo92#icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -107,74 +107,72 @@
    ========================================================================== */
 
 // Placeholder
-$i:                 \e018;
+$i:                         \f618;
 
-// Icons
-$i-ghost:           \e000;
-$i-ghost-logo:      \e600;
-$i-chevron-down:    \e001;
-$i-users:           \e002;
-$i-tag:             \e003;
-$i-tablet:          \e004;
-$i-menu:            \e005;
-$i-settings:        \e006;
-$i-search:          \e007;
-$i-search-left:     \e008;
-$i-rss:             \e009;
-$i-preview:         \e00a;
-$i-app:             \e00b;
-$i-pin:             \e00c;
-$i-pc:              \e00d;
-$i-pacman:          \e00e;
-$i-edit:            \e00f;
-$i-mobile:          \e010;
-$i-image:           \e011;
-$i-mail:            \e012;
-$i-list:            \e013;
-$i-info:            \e014;
-$i-home:            \e015;
-$i-grid:            \e016;
-$i-fullscreen:      \e017;
-$i-question:        \e018;
-$i-external:        \e019;
-$i-error:           \e01a;
-$i-comments:        \e01b;
-$i-close:           \e01c;
-$i-chevron:         \e01d;
-$i-chevron-left:    \e11d;
-$i-calendar:        \e01e;
-$i-archive:         \e01f;
-$i-services:        \e020;
-$i-appearance:      \e021;
-$i-video:           \e022;
-$i-trash:           \e023;
-$i-reply:           \e024;
-$i-stats:           \e025;
-$i-featured:        \e026;
-$i-unfeatured:      \e027;
-$i-clock:           \e028;
-$i-settings2:       \e029;
-$i-camera:          \e02a;
-$i-power:           \e02b;
-$i-lock:            \e02c;
-$i-content:         \e02d;
-$i-user:            \e02e;
-$i-support:         \e02f;
-$i-success:         \e030;
-$i-notification:    \e031;
-$i-add:             \e032;
-$i-check:           \e033;
-$i-x:               \e034;
-$i-link:            \e035;
-$i-camera:          \e036;
-$i-repost:          \e037;
-$i-weather-rain:    \e038;
-$i-weather-sun:     \e039;
-$i-weather-partial: \e03a;
-$i-weather-snow:    \e03b;
-$i-weather-cloudy:  \e03c;
-$i-lightning:       \e03d;
-$i-code:            \e03e;
+$i-ghost:                   \f600;
+$i-chevron-down:            \f601;
+$i-users:                   \f602;
+$i-tag:                     \f603;
+$i-tablet:                  \f604;
+$i-menu:                    \f605;
+$i-settings:                \f606;
+$i-search:                  \f607;
+$i-search-left:             \f608;
+$i-rss:                     \f609;
+$i-preview:                 \f60a;
+$i-app:                     \f60b;
+$i-pin:                     \f60c;
+$i-pc:                      \f60d;
+$i-pacman:                  \f60e;
+$i-edit:                    \f60f;
+$i-mobile:                  \f610;
+$i-image:                   \f611;
+$i-mail:                    \f612;
+$i-list:                    \f613;
+$i-info:                    \f614;
+$i-home:                    \f615;
+$i-grid:                    \f616;
+$i-fullscreen:              \f617;
+$i-question:                \f618;
+$i-external:                \f619;
+$i-error:                   \f61a;
+$i-comments:                \f61b;
+$i-close:                   \f61c;
+$i-chevron:                 \f61d;
+$i-calendar:                \f61e;
+$i-archive:                 \f61f;
+$i-services:                \f620;
+$i-appearance:              \f621;
+$i-video:                   \f622;
+$i-trash:                   \f623;
+$i-reply:                   \f624;
+$i-stats:                   \f625;
+$i-featured:                \f626;
+$i-unfeatured:              \f627;
+$i-clock:                   \f628;
+$i-settings2:               \f629;
+$i-power:                   \f62b;
+$i-lock:                    \f62c;
+$i-content:                 \f62d;
+$i-user:                    \f62e;
+$i-support:                 \f62f;
+$i-success:                 \f630;
+$i-notification:            \f631;
+$i-add:                     \f632;
+$i-check:                   \f633;
+$i-x:                       \f634;
+$i-link:                    \f635;
+$i-camera:                  \f636;
+$i-repost:                  \f637;
+$i-weather-rain:            \f638;
+$i-weather-sun:             \f639;
+$i-weather-partial:         \f63a;
+$i-weather-snow:            \f63b;
+$i-weather-cloudy:          \f63c;
+$i-lightning:               \f63d;
+$i-code:                    \f63e;
+$i-chevron-left:            \f63f;
+$i-ghost-logo:              \f640;
 
 
 /* ==========================================================================
@@ -335,9 +333,6 @@ $i-code:            \e03e;
 }
 .icon-settings2:before {
     content: '#{$i-settings2}';
-}
-.icon-camera:before {
-    content: '#{$i-camera}';
 }
 .icon-power:before {
     content: '#{$i-power}';
