--- a/sass/modules/forms.scss
+++ b/sass/modules/forms.scss
@@ -170,7 +170,7 @@ select {
     font-weight: normal;
     color: $darkgrey;
 
-    @include transition(border-color, 0.15s linear);
+    @include transition(border-color 0.15s linear);
 
     &:focus {
         border-color: $brown;
