Reposition PSM on mobile
References https://github.com/TryGhost/Ghost/issues/3508

- At 450px or less, swap the PSM button and post status buttons to allow more room for the PSM popover

--- a/sass/layouts/editor.scss
+++ b/sass/layouts/editor.scss
@@ -528,6 +528,24 @@ body.zen {
             }
         }
     }
+
+    @media (max-width: 450px) {
+        #entry-actions {
+            float: left;
+            margin-right: 2px;
+        }
+        #entry-controls {
+            float: right;
+            padding-top: 8px;
+            .post-settings-menu {
+                margin-right: 5px;
+                &:before {
+                    right: 5px;
+                }
+            }
+        }
+    }
+
 }
 
 .extended-tags { // When the tag bar is exapanded
